--- a/infrastructure/dev/docker-compose.dev.yml
+++ b/infrastructure/dev/docker-compose.dev.yml
@@ -13,6 +13,7 @@ services:
     build:
       context: ../services/ai
       dockerfile: Dockerfile.dev
+    init: true
     environment:
       - NODE_ENV=development
       - PORT=3001
@@ -24,7 +25,7 @@ services:
       - ../services/ai:/app:rw
       - ../profile/profile.md:/app/profile/profile.md:ro
       - ai-node_modules:/app/node_modules
-    command: sh -c "npm install && npm run dev"
+    command: ["/bin/sh", "-c", "npm install && exec npm run dev"]
     ports:
       - "3001:3001"
 
@@ -61,6 +62,7 @@ services:
     build:
       context: ../services/web
       dockerfile: Dockerfile.dev
+    init: true
     environment:
       - NODE_ENV=development
       - PORT=3002
@@ -72,7 +74,7 @@ services:
     volumes:
       - ../services/web:/app:rw
       - web-node_modules:/app/node_modules
-    command: sh -c "npm install && npm run dev -- --hostname 0.0.0.0 --port 3002"
+    command: ["/bin/sh", "-c", "npm install && exec npm run dev -- --hostname 0.0.0.0 --port 3002"]
     depends_on:
       - ai
       - scraper
