--- a/infrastructure/nginx/conf.d/default.conf
+++ b/infrastructure/nginx/conf.d/default.conf
@@ -42,6 +42,13 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
+    # Silence noisy HMR probe spam when Next isn't serving it
+    location = /_next/webpack-hmr {
+        access_log off;
+        log_not_found off;
+        return 204;
+    }
+
     location /_next/ {
         proxy_pass http://web:3002/_next/;
         proxy_http_version 1.1;
@@ -62,9 +69,14 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # Arachne scraping API (strips /api/scrape prefix)
-    location /api/scrape/ {
-        rewrite ^/api/scrape(/.*)$ $1 break;
+    # Arachne scraping API (normalize /api/scrape -> /scrape, strip prefix for others)
+    location /api/scrape {
+        # Preserve /status path under /scrape
+        rewrite ^/api/scrape/status(/?.*)$ /scrape/status$1 break;
+        # Map base endpoint to backend /scrape
+        rewrite ^/api/scrape/?$ /scrape break;
+        # Strip prefix for health/memory/etc. paths
+        rewrite ^/api/scrape/(.*)$ /$1 break;
         proxy_pass http://scraper:8080;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
