--- a/infrastructure/nginx/conf.d/default.conf
+++ b/infrastructure/nginx/conf.d/default.conf
@@ -65,8 +65,9 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # AI Backend API (strips /api/ai prefix)
+    # AI backend API (strip /api/ai and allow streaming/timeouts)
     location /api/ai/ {
+        limit_req zone=api burst=20 nodelay;
         rewrite ^/api/ai(/.*)$ $1 break;
         proxy_pass http://ai:3001;
         proxy_http_version 1.1;
@@ -74,31 +75,27 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 600s;
+        proxy_read_timeout 600s;
+        proxy_buffering off;
+        proxy_request_buffering off;
     }
 
-    # Arachne scraping API (normalize /api/scrape -> /scrape, strip prefix for others)
-    location /api/scrape {
-        # Preserve /status path under /scrape
-        rewrite ^/api/scrape/status(/?.*)$ /scrape/status$1 break;
-        # Map base endpoint to backend /scrape
-        rewrite ^/api/scrape/?$ /scrape break;
-        # Strip prefix for health/memory/etc. paths
-        rewrite ^/api/scrape/(.*)$ /$1 break;
+    # Arachne scraper API (strip /api/arachne and allow streaming/timeouts)
+    location /api/arachne/ {
+        limit_req zone=scraper burst=10 nodelay;
+        rewrite ^/api/arachne(/.*)$ $1 break;
         proxy_pass http://scraper:8080;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
-    # Scraper backend API passthrough (health, metrics, memory endpoints)
-    location /api/arachne/ {
-        proxy_pass http://scraper:8080/;
-        proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 600s;
+        proxy_read_timeout 600s;
+        proxy_buffering off;
+        proxy_request_buffering off;
     }
 }
