--- a/infrastructure/nginx/conf.d/default.conf
+++ b/infrastructure/nginx/conf.d/default.conf
@@ -12,6 +12,21 @@ server {
         add_header Content-Type text/plain;
     }
 
+    # Memory API (proxy to scraper)
+    location ^~ /memory/ {
+        proxy_pass http://scraper:8080;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 600s;
+        proxy_read_timeout 600s;
+        proxy_buffering off;
+        proxy_request_buffering off;
+    }
+
     # Web Console - Next.js app with basePath=/arachne (port 3002 in dev)
     # Handle both /arachne and /arachne/ - Next.js will handle the routing
     location / {
