--- a/services/web/package.json
+++ b/services/web/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "isomorphic-dompurify": "^2.33.0",
     "lucide-react": "^0.556.0",
-    "next": "16.0.7",
+    "next": "^16.1.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-markdown": "^10.1.0",
